--- a/001_jsx-compiler/css/main.css
+++ b/001_jsx-compiler/css/main.css
@@ -80,4 +80,13 @@ html,body {
     display: block;
     height: 100%;
     padding: 30px 0;
+    white-space: -moz-pre-wrap;
+    /* Opera 4-6 */
+    white-space: -pre-wrap;
+    /* Opera 7 */
+    white-space: -o-pre-wrap;
+    /* CSS3 */
+    white-space: pre-wrap;
+    /* IE 5.5+ */
+    word-wrap: break-word;
 }
